Hide overflow to fix scrollbars always appearing on chrome

--- a/app/components/Table.module.css
+++ b/app/components/Table.module.css
@@ -6,7 +6,7 @@
 }
 
 .row {
-  overflow: scroll;
+  overflow: hidden;
   display: flex;
   height: 75px;
 }
